--- a/partials/main-info.html
+++ b/partials/main-info.html
@@ -47,7 +47,7 @@
     <label for="stock" >Stock:</label>
     <input type="text" class="form-control" size="5" ng-model="itemstock" id="stock" placeholder="Stock" ng-required/>
   </div>
-  <button class="btn" type="submit">Save</button>
+  <button class="btn btn-success" type="submit">Save</button>
 </form>
 
 <div ng-if="pantry.length == 0">
