--- a/partials/main-info.html
+++ b/partials/main-info.html
@@ -19,7 +19,7 @@
             <span editable-text="pantry_item.stock" e-name="stock" e-form="rowform">{{ pantry_item.stock }}</span>
           </td>
           <td>
-            <form editable-form name="rowform" onbeforesave="saveItem(pantry_item, $data)" ng-show="rowform.$visible" class="form-buttons form-inline">
+            <form editable-form name="rowform" onbeforesave="saveItem(pantry_item, $data, $index)" ng-show="rowform.$visible" class="form-buttons form-inline">
               <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-primary">
                 save
               </button>
@@ -29,7 +29,7 @@
             </form>
             <div class="buttons" ng-show="!rowform.$visible">
               <button class="btn btn-primary" ng-click="rowform.$show()">edit</button>
-              <button class="btn btn-danger" ng-click="removeItem(pantry_item.item)">del</button>
+              <button class="btn btn-danger" ng-click="removeItem(pantry_item.item, $index)">del</button>
             </div>
           </td>
         </tr>
@@ -38,7 +38,7 @@
   </div>
 </div>
 
-<form class="form-inline" ng-submit="newItem()">
+<form name="newItemForm" class="form-inline" ng-submit="newItem()">
   <div class="form-group">
     <label for="item" >Item:</label>
     <input type="text" class="form-control" size="20" id="item" ng-model="itemname" placeholder="Item" ng-required required/>
